--- a/css/style.css
+++ b/css/style.css
@@ -389,20 +389,20 @@ h1 {
 
 h2 {
   margin-top: 20px;
-  font-size: 32px;
-  line-height: 36px;
+  font-size: 38px;
+  line-height: 44px;
 }
 
 h3 {
   margin-top: 20px;
-  font-size: 24px;
-  line-height: 30px;
+  font-size: 32px;
+  line-height: 36px;
 }
 
 h4 {
-  margin-top: 10px;
-  font-size: 18px;
-  line-height: 24px;
+  margin-top: 20px;
+  font-size: 24px;
+  line-height: 30px;
 }
 
 h5 {
@@ -2203,25 +2203,25 @@ h2 {
   margin-top: 20px;
   margin-bottom: 10px;
   font-family: Baskervville, sans-serif;
-  font-size: 50px;
+  font-size: 38px;
   font-weight: 700;
-  line-height: 50px;
+  line-height: 44px;
 }
 
 h3 {
   margin-top: 20px;
   margin-bottom: 10px;
   font-family: Baskervville, sans-serif;
-  font-size: 24px;
+  font-size: 50px;
   font-weight: 700;
-  line-height: 30px;
+  line-height: 50px;
 }
 
 h4 {
-  margin-top: 10px;
+  margin-top: 20px;
   margin-bottom: 10px;
   font-family: Baskervville, sans-serif;
-  font-size: 30px;
+  font-size: 24px;
   font-weight: 700;
   line-height: 30px;
 }
@@ -2368,6 +2368,17 @@ label {
 }
 
 .heading.h2 {
+  text-transform: uppercase;
+  font-size: 100px;
+  font-weight: 400;
+}
+
+.heading.h2.text-white.margin-bottom-40px {
+  font-family: Fjalla One, sans-serif;
+  font-size: 80px;
+}
+
+.heading.h3 {
   color: var(--black-gray);
   margin-bottom: 0;
   font-family: Fjalla One, sans-serif;
@@ -2376,26 +2387,21 @@ label {
   line-height: 1.2;
 }
 
-.heading.h2.text-white {
+.heading.h3.text-white {
   color: var(--white);
 }
 
-.heading.h2.text-white.margin-bottom-40px {
+.heading.h3.text-white.margin-bottom-40px {
   margin-bottom: 40px;
 }
 
-.heading.h2.margin-bottom-40px {
+.heading.h3.margin-bottom-40px {
   font-family: Fjalla One, sans-serif;
 }
 
-.heading.h3 {
+.heading.h4 {
   font-size: 40px;
   line-height: 40px;
-}
-
-.heading.h4 {
-  font-size: 30px;
-  line-height: 30px;
 }
 
 .heading.h5 {
@@ -2854,7 +2860,7 @@ label {
 
 /* For Privacy page */
 body.privacy-policy .navbar {
-  background-color: #5d6c7b;
+  background-color: #1B262A;
   margin-top: 0px;
   padding-top: 20px;
 }
@@ -2865,7 +2871,7 @@ body.privacy-policy .heading {
 
 /* For Terms */
 body.terms-conditions .navbar {
-  background-color: #5d6c7b;
+  background-color: #1B262A;
   margin-top: 0px;
   padding-top: 20px;
 }
@@ -2874,6 +2880,17 @@ body.terms-conditions .heading {
   padding-bottom: 5px;
 }
 
+/* For contact-us */
+/* For Terms */
+body.contact-us .navbar {
+  background-color: #1B262A;
+  margin-top: 0px;
+  padding-top: 20px;
+}
+body.contact-us .heading {
+  padding-top: 25px;
+  padding-bottom: 5px;
+}
 
 .n {
   z-index: 5;
@@ -4182,6 +4199,15 @@ body.terms-conditions .heading {
   .footer-copyright {
     font-size: 14px;
     line-height: 20px;
+    text-align: center;
+  }
+
+  .footer-copyright-small {
+    font-size: 12px;
+  }
+
+  .footer-copyright-smaller {
+    font-size: 10px;
   }
 
   .footer-social-block {
@@ -4250,18 +4276,29 @@ body.terms-conditions .heading {
   }
 
   .heading.h2 {
+    margin-bottom: 0;
+    font-size: 60px;
+  }
+
+  .heading.h2.text-white.margin-bottom-40px {
+    margin-bottom: 40px;
+    font-family: Fjalla One, sans-serif;
+    font-size: 55px;
+  }
+
+  .heading.h2.logotext {
+    line-height: 40px;
+  }
+
+  .heading.h3 {
     padding-top: 0;
     padding-bottom: 20px;
     font-family: Fjalla One, sans-serif;
     font-size: 35px;
   }
 
-  .heading.h2.margin-bottom-40px {
+  .heading.h3.margin-bottom-40px {
     font-family: Fjalla One, sans-serif;
-  }
-
-  .heading.h4 {
-    font-size: 25px;
   }
 
   .heading.h5 {
@@ -4653,6 +4690,80 @@ body.terms-conditions .heading {
     display: flex;
   }
 }
+
+.visually-hidden {
+  position: absolute !important;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
+
+.card-link {
+  text-decoration: none;
+  color: inherit;
+  display: block;
+}
+
+.card-link:hover {
+  text-decoration: none;
+}
+
+.cta-button:hover {
+  color: #ffffff;
+}
+
+.footer-link-2 {
+  color: var(--white);
+  margin-top: 10px;
+  font-size: 12px;
+  text-decoration: none;
+  transition: all .2s;
+}
+
+.footer-link-2:hover {
+  color: var(--sc_dark);
+}
+
+.footer-brand-block {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer-trust {
+  display: flex;
+  gap: 12px;
+  margin-top: 10px;
+}
+
+.footer-trust img {
+  height: 24px;
+  opacity: 0.7;
+}
+
+.button-top-margin {
+  margin-top: 20px;
+}
+
+/* For services backlinks */
+.menu-section-link {
+  color: inherit;
+  text-decoration: none;
+  display: inline-block;
+}
+
+.menu-section-link:hover {
+  text-decoration: underline; /* optional, subtle */
+}
+
+.map-embed iframe {
+  border-radius: 12px;
+}
+
 
 #w-node-f52a1497-2735-f171-3c8d-6f49dfee458a-dc178eda, #w-node-_17a3ffb9-d2aa-c6bf-5ad0-e4adb40ce44f-dc178eda, #w-node-_953fa10b-5bac-8865-4e96-81ee900b4b3e-dc178eda {
   grid-area: span 1 / span 1 / span 1 / span 1;
