--- a/css/style.css
+++ b/css/style.css
@@ -4810,6 +4810,10 @@ body.contact-us .heading {
   height: 26px;
 }
 
+.section-wrapper-contact {
+  margin-top: 30px;
+}
+
 /* Mobile only */
 @media (min-width: 768px) {
   .mobile-fab { display: none; }
