--- a/css/style.css
+++ b/css/style.css
@@ -4810,10 +4810,17 @@ body.contact-us .heading {
   height: 26px;
 }
 
+/* Contact section */
 .section-wrapper-contact {
-  margin-top: 30px;
+  margin-top: 30px !important;
 }
 
+/* @media (max-width: 767px) {
+  .section-wrapper-contact {
+    margin-top: 30px;
+  }
+}
+ */
 /* Mobile only */
 @media (min-width: 768px) {
   .mobile-fab { display: none; }
