--- a/css/style.css
+++ b/css/style.css
@@ -2353,7 +2353,7 @@ label {
   margin-top: 0;
   font-family: Fjalla One, sans-serif;
   font-weight: 700;
-  line-height: .8;
+  line-height: 1.1;
 }
 
 .heading.h1 {
