new services page added

--- a/css/style.css
+++ b/css/style.css
@@ -4767,7 +4767,7 @@ body.contact-us .heading {
 
 /* For services backlinks */
 .menu-section-link {
-  color: inherit;
+  color: #7a093880;
   text-decoration: none;
   display: inline-block;
 }
